readme file updated . product is ready to use . Some extra features and feasiblity will be added in future